# cpp-finalproject-ERS

./: .gitattributes  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  docker-compose.yml  main.cpp
docs/: INSTALL.md  MANUAL.md
include/: database.hpp
sis-cpp/src/: main.cpp
src/: main.cpp
